src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional_Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Rating__c</fullName>
        <label>Advocacy (Rating)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy__c</fullName>
        <label>Advocacy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_concerns__c</fullName>
        <label>Do you have any concerns</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating__c</fullName>
        <label>Expertise (Rating)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generosity_Rating__c</fullName>
        <label>Generosity (Rating)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generosity__c</fullName>
        <label>Generosity</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_know_Nominee__c</fullName>
        <label>How do you know the Nominee?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leadership_Rating__c</fullName>
        <label>Leadership (Rating)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadership__c</fullName>
        <label>Leadership</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nominator__c</fullName>
        <label>Nominator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personally_mean_to_be_MVP__c</fullName>
        <label>Personally mean to be MVP</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_describe_how_you_know__c</fullName>
        <label>Describe the Nominee with an example</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Should_you_be_renewed__c</fullName>
        <label>Should you be renewed</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <recordTypes>
        <fullName>Feedback</fullName>
        <active>true</active>
        <label>Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nomination</fullName>
        <active>true</active>
        <label>Nomination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_feedback</fullName>
        <active>true</active>
        <label>Self-feedback</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>